--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,8 @@ span {
 }
 
 .portfolio-layer p {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
+    font-weight: 600;
     margin: .3rem 0 1rem;
 }
 
