--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,8 @@ span {
 
 .portfolio-box:hover img {
     transform: scale(1.1) ;
+    filter: brightness(40%);
+    filter: blur(2px);
 }
 
 .portfolio-box .portfolio-layer {
@@ -294,11 +296,14 @@ span {
 
 .portfolio-layer h4 {
     font-size: 3rem;
+    text-shadow: black 0.1em 0.1em 0.2em;
+    
 }
 
 .portfolio-layer p {
     font-size: 1.5rem;
-    margin: .3rem 0 1rem;
+    margin: .3rem 0 1rem; 
+    text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 .portfolio-layer a {
