--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ span {
     box-shadow: none;
 }
 
-.about {
+.sobre {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -173,7 +173,7 @@ span {
     background: var(--second--bg-color);
 }
 
-.about-img img {
+.sobre-img img {
     width: 35vw;
 }
 
@@ -182,26 +182,26 @@ span {
     font-size: 4.5rem;
 }
 
-.about-content h2 {
+.sobre-content h2 {
     text-align: left;
     line-height: 1.2;
 }
 
-.about-content h3 {
+.sobre-content h3 {
     font-size: 2.6rem;
 }
 
-.about-content p {
+.sobre-content p {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 
 }
 
-.services h2{
+.servicos h2{
     margin-bottom: 5rem;
 }
 
-.services-container {
+.servicos-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -209,7 +209,7 @@ span {
     gap: 2rem;
 }
 
-.services-container .services-box {
+.servicos-container .servicos-box {
     flex: 1 1 30rem;
     background: var(--second--bg-color);
     padding: 3rem 2rem 4rem;
@@ -220,21 +220,21 @@ span {
 
 }
 
-.services-container .services-box:hover {
+.servicos-container .servicos-box:hover {
     border-color: var(--main--color);
     transform: scale(1.02);
 }
 
-.services-box i {
+.servicos-box i {
     font-size: 7rem;
     color: var(--main--color);
 }
 
-.services-box h3 {
+.servicos-box h3 {
     font-size: 2.6rem;
 }
 
-.services-box p {
+.servicos-box p {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
 }
